--- a/index.html
+++ b/index.html
@@ -3,12 +3,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title> Anime </title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Animes</h1>
-    <h2>Vou contar sobre minhas experiência neste mundo sem fim que é os anime.</h2>
-    
-    
+
+    <nav id="navbar">
+    <div class="logo">StarCafé</div>
+    <ul id="menu">
+        <li><a href="#cafe-quente">Café Quente</a></li>
+        <li><a href="#cafe-frio">Café Frio</a></li>
+        <li><a href="#sobremesas">Sobremesas</a></li>
+        <li><a href="#contato">Contato</a></li>
+    </ul>
+</nav>
+
+<header>
+    <h1>StarCafé — Sabores que encantam</h1>
+</header>
+
 </body>
 </html>
