--- a/index.html
+++ b/index.html
@@ -3,23 +3,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Mangá Store</title>
 </head>
 <body>
 
     <nav id="navbar">
-    <div class="logo">StarCafé</div>
+    <div class="logo">Mangá Store</div>
     <ul id="menu">
-        <li><a href="#cafe-quente">Café Quente</a></li>
-        <li><a href="#cafe-frio">Café Frio</a></li>
-        <li><a href="#sobremesas">Sobremesas</a></li>
-        <li><a href="#contato">Contato</a></li>
+        <li><a href="#Mangás">Mangás</a></li>
+        <li><a href="#Manhuas">Manhuas</a></li>
+        <li><a href="#Manhwas">Manhwas</a></li>
     </ul>
 </nav>
 
 <header>
-    <h1>StarCafé — Sabores que encantam</h1>
+    <h1>Mangá Store — Historias para tudo e todos</h1>
 </header>
-
+    <h2>Mangás</h2>
+    <div class="Mangás">
+        <img src="https://www.comix.com.br/media/catalog/product/cache/368852526d07b47f9ba19ccfaea17e2a/s/o/sonobisqui14.jpg" alt="Sono Bisque Doll">
+        <img src="https://www.comix.com.br/media/catalog/product/cache/368852526d07b47f9ba19ccfaea17e2a/p/e/pessoal01.jpg" alt="Entre O Profissional E O Pessoal - On/Off">
+        <img src="https://www.comix.com.br/media/catalog/product/cache/368852526d07b47f9ba19ccfaea17e2a/k/a/kaiju14.jpg" alt="Kaiju N.° 8 ">
+        <img src="https://www.comix.com.br/media/catalog/product/cache/368852526d07b47f9ba19ccfaea17e2a/e/l/elderringbecome1.jpg" alt="Elden Ring: Become Lord">
+        <img src="https://www.comix.com.br/media/catalog/product/cache/368852526d07b47f9ba19ccfaea17e2a/n/o/noamexa12.jpg" alt="Não Mexa Comigo, Nagatoro">
+        
+    </div >
+    <div class="conteiner">
+        <a href="https://www.comix.com.br/sono-bisque-doll-minha-adoravel-cosplayer-14.html">Sono Bisque Doll: Minha Adorável Cosplayer 14 - R$38,17</a>
+        <a href="https://www.comix.com.br/entre-o-profissional-e-o-pessoal-on-off-vol-01.html">Entre O Profissional E O Pessoal - On/Off Vol 01 - R$37,32</a>
+        <a href="https://www.comix.com.br/kaiju-n-8-vol-14.html">Kaiju N.° 8 Vol. 14 - R$37,32</a>
+        <a href="https://www.comix.com.br/elden-ring-become-lord-vol-01.html">Elden Ring: Become Lord Vol 01 - R$50,92</a>
+        <a href="https://www.comix.com.br/n-o-mexa-comigo-nagatoro-12.html">Não Mexa Comigo, Nagatoro 12 - R$37,32</a>
+    </div>
 </body>
 </html>
