--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
         
     </div >
     <div class="conteiner">
-        <a href="https://www.comix.com.br/sono-bisque-doll-minha-adoravel-cosplayer-14.html">Sono Bisque Doll: Minha Adorável Cosplayer 14 - R$38,17</a>
-        <a href="https://www.comix.com.br/entre-o-profissional-e-o-pessoal-on-off-vol-01.html">Entre O Profissional E O Pessoal - On/Off Vol 01 - R$37,32</a>
-        <a href="https://www.comix.com.br/kaiju-n-8-vol-14.html">Kaiju N.° 8 Vol. 14 - R$37,32</a>
-        <a href="https://www.comix.com.br/elden-ring-become-lord-vol-01.html">Elden Ring: Become Lord Vol 01 - R$50,92</a>
-        <a href="https://www.comix.com.br/n-o-mexa-comigo-nagatoro-12.html">Não Mexa Comigo, Nagatoro 12 - R$37,32</a>
+        <a href="https://www.comix.com.br/sono-bisque-doll-minha-adoravel-cosplayer-14.html">Sono Bisque Doll: Minha Adorável Cosplayer 14 <br> R$38,17</a>
+        <a href="https://www.comix.com.br/entre-o-profissional-e-o-pessoal-on-off-vol-01.html">Entre O Profissional E O Pessoal - On/Off Vol 01 <br> R$37,32</a>
+        <a href="https://www.comix.com.br/kaiju-n-8-vol-14.html">Kaiju N.° 8 Vol. 14 <br> R$37,32</a>
+        <a href="https://www.comix.com.br/elden-ring-become-lord-vol-01.html">Elden Ring: Become Lord Vol 01 <br> R$50,92</a>
+        <a href="https://www.comix.com.br/n-o-mexa-comigo-nagatoro-12.html">Não Mexa Comigo, Nagatoro 12 <br> R$37,32</a>
     </div>
 </body>
 </html>
