--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <li><a href="#Mangas">Mangás</a></li>
       <li><a href="#Manhuas">Manhuas</a></li>
       <li><a href="#Manhwas">Manhwas</a></li>
+      <li><a href="#Autor">Autor</a></li>
     </ul>
   </nav>
 
@@ -80,7 +81,7 @@
         <img src="https://m.media-amazon.com/images/I/815ivDLx5pL._SL1500_.jpg" alt="The Beginning After The End Vol. 1"/>
         <a class="titulo" href="https://www.amazon.com.br/Beginning-After-End-Full-Color/dp/8583624712/ref=asc_df_8583624712?mcid=80cd047bef8e318aa605fc76dbc3c200&tag=googleshopp00-20&linkCode=df0&hvadid=709857900456&hvpos=&hvnetw=g&hvrand=18413770355197156140&hvpone=&hvptwo=&hvqmt=&hvdev=c&hvdvcmdl=&hvlocint=&hvlocphy=9219313&hvtargid=pla-2293741768945&psc=1&language=pt_BR&gad_source=1">
           The Beginning After the End – Volume 02 (Full Color)
-          <span class="preco">R$ 48,90</span>
+          <span class="preco">R$ 46,45</span>
         </a>
       </article>
 
@@ -88,13 +89,13 @@
         <img src="https://m.media-amazon.com/images/I/51u4nbOT8ML._SY445_SX342_.jpg" alt="Omniscient Reader Vol. 1"/>
         <a class="titulo" href="https://www.amazon.com.br/Omniscient-Readers-Viewpoint-Vol-1/dp/B0CCNFHFZD?source=ps-sl-shoppingads-lpcontext&ref_=fplfs&psc=1&smid=A1ZZFT5FULY4LN">
           Omniscient Reader's Viewpoint, Vol. 1
-          <span class="preco">R$ 32,23</span>
+          <span class="preco">R$ 96,67</span>
         </a>
       </article>
 
       <article class="card">
         <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcRIKmhpitx6y2MW1OZUnregEprlT_VohiUJ8tZk10vV4XbmKqib7LGWqXUrSe5C6DqOY5mgaHQxKJVZNP0XRtiBTQhtdH3JagxFSVdu8-wzSmUI8Ce2JThC" alt="Tower of God Vol. 1"/>
-        <a class="titulo" href="VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMWhnZWhpMHFycjdyRnQzVFVqMkxyb3cyalNOZXY0d1Jnb0lhQytlbGZlN25pUFBRajRaTEF6MzhJRlkvOEtGSXBya3NNb1p0UGRVZzBQVWE0L3Mwd3pYdUhRQUhIZ3Q2UG9QY08zZXVJaXRnPT0">
+        <a class="titulo" href="https://shopee.com.br/product/304625158/12285025640?gads_t_sig=VTJGc2RHVmtYMTlxTFVSVVRrdENkVHQ3ZkZSUTMrR3pBWmZZNzdrcnRBMWhnZWhpMHFycjdyRnQzVFVqMkxyb3cyalNOZXY0d1Jnb0lhQytlbGZlN25pUFBRajRaTEF6MzhJRlkvOEtGSXBya3NNb1p0UGRVZzBQVWE0L3Mwd3pYdUhRQUhIZ3Q2UG9QY08zZXVJaXRnPT0">
           Tower of God Vol. 1
           <span class="preco">R$ 49,90</span>
         </a>
