--- a/2°PG.html
+++ b/2°PG.html
@@ -1,28 +1,106 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Créditos</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Créditos — Mangá Store</title>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="Autores">
-        <h1>Autor</h1>
-        <h1>Co-Autor</h1>
-    </div>
-    <div class="textos">
-        <!-- Autor -->
-        <div id="L1">
-            <li>Olá, meu nome é nicolas Romanatto Moro.</li>
-            <li>Sou o autor deste site de vendas.</li>
-            <li>Tive a ideia de criá-lo durante uma ida a uma livraria. Nessa ocasião, <br> não encontrei os livros que queria, então decidi desenvolver um site onde, <br> ao procurar pelo nome do livro, seria possível encontrá-lo à venda.</li>
-        </div>
-        <!-- Co-Autor -->
-        <div id="L2">
-            <li>Olá, meu nome é Andreia Romanatto.</li>
-            <li>Sou a coautora deste site de vendas.</li>
-            <li>Não participei diretamente da confecção do site, mas contribuí com opiniões sobre a decoração.</li>
-        </div>
-    </div>
+
+  <nav id="navbar">
+    <div class="logo">Mangá Store</div>
+    <ul id="menu">
+      <li><a href="index.html#Mangas">Mangás</a></li>
+      <li><a href="index.html#Manhuas">Manhuas</a></li>
+      <li><a href="index.html#Manhwas">Manhwas</a></li>
+      <li><a href="index.html">Início</a></li>
+    </ul>
+  </nav>
+
+  <header class="header-credits">
+    <h1>Créditos e Atribuições</h1>
+  </header>
+
+  <main class="container">
+    <section class="bloco-creditos">
+      <h2>Autores e Ilustradores</h2>
+      <ul class="lista-creditos">
+        <li>
+          <strong>Sono Bisque Doll: Minha Adorável Cosplayer</strong><br/>
+          Autor: Shinichi Fukuda — Editora no Brasil: Panini (quando aplicável).
+        </li>
+        <li>
+          <strong>Entre o Profissional e o Pessoal — On/Off</strong><br/>
+          Autoras: A1 (글) & A1 (그림) — Publicação original webcomic.
+        </li>
+        <li>
+          <strong>Kaiju nº 8</strong><br/>
+          Autor: Naoya Matsumoto — Editora: Shueisha | Brasil: Panini.
+        </li>
+        <li>
+          <strong>Elden Ring: Become Lord</strong><br/>
+          Baseado na franquia Elden Ring — Autoria/Adaptação conforme créditos do volume específico.
+        </li>
+        <li>
+          <strong>Não Mexa Comigo, Nagatoro</strong><br/>
+          Autor: Nanashi (774) — Editora: Kodansha | Brasil: Panini.
+        </li>
+      </ul>
+    </section>
+
+    <section class="bloco-creditos">
+      <h2>Manhuas (China)</h2>
+      <ul class="lista-creditos">
+        <li>
+          <strong>Solo Leveling</strong> — OBS: é originalmente manhwa (Coreia). Créditos: Chugong (autor), Dubu/REDICE (arte).
+        </li>
+        <li>
+          <strong>The Beginning After The End</strong> — TurtleMe (autor), Fuyuki23 (arte).
+        </li>
+        <li>
+          <strong>Omniscient Reader</strong> — singNsong (autor), Sleepy-C (arte).
+        </li>
+        <li>
+          <strong>Tower of God</strong> — SIU (autor e arte).
+        </li>
+        <li>
+          <strong>Eleceed</strong> — Son Jeho (autor), ZHENA (arte).
+        </li>
+      </ul>
+      <p class="nota">Nota: muitos títulos listados acima são coreanos (manhwa). Ajuste os rótulos conforme sua curadoria.</p>
+    </section>
+
+    <section class="bloco-creditos">
+      <h2>Manhwas (Coreia)</h2>
+      <ul class="lista-creditos">
+        <li><strong>The Breaker</strong> — Jeon Geuk-jin (autor), Park Jin-hwan (arte).</li>
+        <li><strong>Noblesse</strong> — Son Jeho (autor), Lee Kwangsu (arte).</li>
+        <li><strong>The God of High School</strong> — Yongje Park (autor e arte).</li>
+        <li><strong>DICE: The Cube That Changes Everything</strong> — Yun Hyunseok (autor e arte).</li>
+        <li><strong>Lookism</strong> — Park Tae-joon (autor e arte).</li>
+      </ul>
+    </section>
+
+    <section class="bloco-creditos">
+      <h2>Fontes de Imagens e Links</h2>
+      <ul class="lista-creditos">
+        <li>Capas de mangás: Comix (links diretos dos produtos).</li>
+        <li>Capas de manhuas/manhwas: Amazon (links exemplificativos). Substitua pelos links oficiais que você utilizar.</li>
+        <li>Imagem do cabeçalho: wallpaperbetter.com (link usado no CSS do header).</li>
+      </ul>
+      <p class="nota">Use sempre imagens com direito de uso adequado e cite a fonte. Se possível, hospede as imagens localmente na pasta img/ do seu projeto e inclua os créditos aqui.</p>
+    </section>
+
+    <section class="bloco-creditos">
+      <h2>Projeto</h2>
+      <ul class="lista-creditos">
+        <li>Site criado como atividade escolar — Tema: Mangá Store.</li>
+        <li>Desenvolvimento: [Nicolas Romanatto Moro].</li>
+        <li>Tecnologias: HTML5 + CSS3.</li>
+      </ul>
+    </section>
+  </main>
+
 </body>
 </html>
