--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <li><a href="#Mangas">Mangás</a></li>
       <li><a href="#Manhuas">Manhuas</a></li>
       <li><a href="#Manhwas">Manhwas</a></li>
-      <li><a href="#Autor">Autor</a></li>
+      <li><a href="2°PG.html">Autor</a></li>
     </ul>
   </nav>
 
