--- a/2°PG.html
+++ b/2°PG.html
@@ -68,7 +68,6 @@
           <strong>Eleceed</strong> — Son Jeho (autor), ZHENA (arte).
         </li>
       </ul>
-      <p class="nota">Nota: muitos títulos listados acima são coreanos (manhwa). Ajuste os rótulos conforme sua curadoria.</p>
     </section>
 
     <section class="bloco-creditos">
@@ -89,7 +88,6 @@
         <li>Capas de manhuas/manhwas: Amazon (links exemplificativos). Substitua pelos links oficiais que você utilizar.</li>
         <li>Imagem do cabeçalho: wallpaperbetter.com (link usado no CSS do header).</li>
       </ul>
-      <p class="nota">Use sempre imagens com direito de uso adequado e cite a fonte. Se possível, hospede as imagens localmente na pasta img/ do seu projeto e inclua os créditos aqui.</p>
     </section>
 
     <section class="bloco-creditos">
@@ -97,7 +95,7 @@
       <ul class="lista-creditos">
         <li>Site criado como atividade escolar — Tema: Mangá Store.</li>
         <li>Desenvolvimento: [Nicolas Romanatto Moro].</li>
-        <li>Tecnologias: HTML5 + CSS3.</li>
+        <li>Tecnologias: HTML + CSS.</li>
       </ul>
     </section>
   </main>
